wifi和eth管理服务

--- a/config/system.ini
+++ b/config/system.ini
@@ -8,6 +8,12 @@ sta_passwd = 12345678
 hostap_conf_path = /etc/hostapd
 encryption = 4
 
+[ethernet]
+mode = dhcp
+inet4_addr = 192.168.0.1
+netmask = 255.255.255.0
+inet = eth0
+
 [serial1]
 path = /dev/ttyUSB0
 service = serial
@@ -38,6 +44,7 @@ epd = /var/run/epd.sock
 web = 127.0.0.1:8000
 serial = /var/run/serial.sock
 wifi = /var/run/wifi.sock
+ethernet = /var/run/eth.sock
 
 [log]
 epd = /var/logs/epd.log
