--- a/config/system.ini
+++ b/config/system.ini
@@ -1,5 +1,4 @@
 [wifi]
-enable = false
 mode = sta
 ap_ssid = 8000000000000001
 ap_passwd = 12345678
@@ -7,6 +6,7 @@ sta_ssid = sta_ssid
 sta_passwd = 12345678
 hostap_conf_path = /etc/hostapd
 encryption = 4
+inet = wlan0
 
 [ethernet]
 mode = dhcp
